--- a/dts/arm64/broadcom/bcm2711.dtsi
+++ b/dts/arm64/broadcom/bcm2711.dtsi
@@ -40,7 +40,7 @@
 		sram0: memory@200000 {
 			device_type = "memory";
 			compatible = "mmio-sram";
-			reg = <0x200000 0x80000>;
+			reg = <0x200000 0x280000>;
 		};
 
 		gic: interrupt-controller@ff841000 {
@@ -89,6 +89,12 @@
 			clock-frequency = <DT_FREQ_M(500)>;
 			interrupts = <GIC_SPI 93 IRQ_TYPE_LEVEL
 				      IRQ_DEFAULT_PRIORITY>;
+			status = "disabled";
+		};
+
+		display: display@fe00b880 {
+			compatible = "brcm,bcm2711-display";
+			reg = <0xfe00b880 0x40>;
 			status = "disabled";
 		};
 	};
